syntax = "proto3";
package config;

option go_package = "./pbgo/configpb";

message Config {
    PostgresDB postgres_db = 1;
    TelegramConfig telegram_config = 2;
    FinancialsData financials_data = 3;
    FinancialsConfig financials_config = 4;
}

message PostgresDB {
    string host = 1;
    string user = 2;
    string password = 3;
    string db_name = 4;
    uint32 port = 5;
}

message TelegramConfig {
    string api_key = 1;
    bool debug = 2;
    string allowed_user = 3;
}

message FinancialsData {
    string assets_csv_filepath = 1;
    string expenses_csv_filepath = 2;
    string income_csv_filepath = 3;
    string shared_expenses_csv_filepath = 4;
    string trades_csv_filepath = 5;
}

message FinancialsConfig {
    int32 run_interval_in_hours = 1;
}
